WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46934
-[DOMDocument _documentRange] throws an exception if there is no document element
https://bugs.webkit.org/show_bug.cgi?id=46934
Summary
-[DOMDocument _documentRange] throws an exception if there is no document ele...
Anders Carlsson
Reported
2010-09-30 13:54:19 PDT
-[DOMDocument _documentRange] throws an exception if there is no document element
Attachments
Patch
(1.66 KB, patch)
2010-09-30 13:55 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-09-30 13:54:32 PDT
<
rdar://problem/8169260
>
Anders Carlsson
Comment 2
2010-09-30 13:55:55 PDT
Created
attachment 69377
[details]
Patch
Darin Adler
Comment 3
2010-09-30 13:57:23 PDT
Comment on
attachment 69377
[details]
Patch Any way to regression-test this?
Anders Carlsson
Comment 4
2010-09-30 14:42:05 PDT
(In reply to
comment #3
)
> (From update of
attachment 69377
[details]
) > Any way to regression-test this?
Not without adding API to dumpRenderTree.
Anders Carlsson
Comment 5
2010-09-30 14:46:38 PDT
Committed
r68831
: <
http://trac.webkit.org/changeset/68831
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug