-[DOMDocument _documentRange] throws an exception if there is no document element https://bugs.webkit.org/show_bug.cgi?id=46934 <rdar://problem/8169260>

Reviewed by Darin Adler.

If there is no document element, just return an empty range. Otherwise we'll try to call
Range::selectNode with a null Node which will throw a NOT_FOUND exception.

* DOM/WebDOMOperations.mm:
(-[DOMDocument _documentRange]):

Canonical link: https://commits.webkit.org/59463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68831 268f45cc-cd09-0410-ab3c-d52691b4dbfc